# VIS.Assignments

./: README.md
.metadata/.plugins/org.eclipse.cdt.core/: Vis.Ass07.CameraCallibration.1512568164249.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: Vis.Ass07.CameraCallibration.sc
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.epp.usagedata.recording/: usagedata.csv
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workbench.xml  workingsets.xml
RobustPlanarPose/: demo
Vis.Ass05.HandDetection/: .cproject  .project
Vis.Ass05.HandDetection/Debug/: Vis.Ass05.HandDetection
Vis.Ass05.HandDetection/Debug/src/: HandDetection.d  subdir.mk
Vis.Ass05.HandDetection/src/: HandDetection.cpp  bilal_main.cpp  main.cpp  main_bilal.cpp
Vis.Ass05/Vis.Ass05.HandDetection/Debug/: Vis.Ass05.HandDetection  makefile
Vis.Ass05/Vis.Ass05.HandDetection/src/: main.cpp
Vis.Ass06/Vis.Ass06.2DTransformation/: .project
Vis.Ass06/img_trans/: CMakeCache.txt  cmake_install.cmake  img_transf  main.cpp
Vis.Ass07/Vis.Ass07.CameraCalibaration/: .project
Vis.Ass09.CameraClibaraion/: CMakeCache.txt  CMakeLists.txt  Makefile  assignment9  cmake_install.cmake  images.xml  main.cpp  out_camera_data.yml
Vis.Ass11.FeatureDetections/: CMakeCache.txt  CMakeLists.txt  Makefile  Note.txt  assignment11  cmake_install.cmake  main.cpp
assignment12/: CMakeCache.txt  CMakeLists.txt  Makefile  assignment12  cmake_install.cmake  main.cpp
assignment9/: CMakeCache.txt  Makefile  assignment9  cmake_install.cmake  images.xml  main.cpp  out_camera_data.yml
img_trans/: CMakeLists.txt  Makefile  main.cpp
(+15 files in other folders)
